# Assignment_1

./: .gitmodules  CMakeLists.txt  README.md  build.py  diego_ubuntu_pc_packages_installed.txt
.build/Assignment_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
.build/Assignment_1/3rdPartyLibs/glfw/: cmake_install.cmake
.build/Assignment_1/3rdPartyLibs/glfw/src/: cmake_install.cmake  glfw3.pc
.build/Assignment_1/3rdPartyLibs/glm/: CTestTestfile.cmake  cmake_install.cmake
.build/Assignment_1/3rdPartyLibs/glm/glm/: CTestTestfile.cmake  cmake_install.cmake
.build/Assignment_1/3rdPartyLibs/json/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
.build/Assignment_1/App/: cmake_install.cmake  mlb-stats-2020-4-20  mlb-stats-2020-4-9
.build/Assignment_1/App/shaders/vertex/: 3D_color_vertex_texture.vs  font_text.vs
.build/Assignment_1/Devices/Window/: cmake_install.cmake
.build/Assignment_1/Devices/Window/CommonWindow/: cmake_install.cmake
.build/Assignment_1/Devices/Window/DiegofiedWindow/: cmake_install.cmake
App/: CMakeLists.txt  app.cpp  text_renderer.cpp
App/shaders/fragment/: 3D_color_vertex_texture.fs
Devices/Window/: CMakeLists.txt
Devices/Window/CommonWindow/: CMakeLists.txt
Devices/Window/CommonWindow/SubComponents/BaseRenderer/include/: BaseRenderer.h
Devices/Window/CommonWindow/SubComponents/BaseRenderer/src/: BaseRenderer.cpp
Devices/Window/CommonWindow/SubComponents/BaseShader/include/: BaseShader.h
Devices/Window/CommonWindow/SubComponents/BaseShader/src/: BaseShader.cpp
Devices/Window/CommonWindow/include/: WindowBase.h
Devices/Window/CommonWindow/src/: WindowBase.cpp
Devices/Window/DiegofiedWindow/: CMakeLists.txt
Devices/Window/DiegofiedWindow/SubComponents/DiegofiedRenderer/include/: DiegofiedRenderer.h
Devices/Window/DiegofiedWindow/SubComponents/DiegofiedRenderer/src/: DiegofiedRenderer.cpp
Devices/Window/DiegofiedWindow/SubComponents/DiegofiedShader/include/: DiegofiedShader.h
Devices/Window/DiegofiedWindow/SubComponents/DiegofiedShader/src/: DiegofiedShader.cpp
Devices/Window/DiegofiedWindow/include/: DiegofiedWindow.h
Devices/Window/DiegofiedWindow/src/: DiegofiedWindow.cpp
cmake/: FindGLM.cmake
